Tue Mar  9 14:16:06 2004  Shugo Maeda <shugo@modruby.net>

	* Makefile.in: use $(RUBY) to execute bin2c.

Tue Mar  9 14:08:19 2004  MOROHOSHI Akihiko <moro@remus.dti.ne.jp>

	* eruby_main.c (proc_args): pass ARGV to scripts.

Wed Feb 25 13:37:07 2004  U.Nakamura <usa@garbagecollect.jp>

	* autoconf.rb: should use RUBY_PLATFORM instead of PLATFORM.

Wed Dec 24 00:45:29 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_main.c (run): call rb_exec_end_proc().

Wed Dec 24 00:11:19 2003  Shugo Maeda <shugo@modruby.net>

	* version 1.0.5 released.

Wed Dec 24 00:09:51 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_main.c (eruby_xmalloc): new function.

	* eruby_main.c (prog_args): use eruby_xmalloc().

	* eruby_main.c (guess_mode): ditto.

Sat Dec  6 00:53:29 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_main.c (proc_args): copy the return value of getenv().
	Thanks, Kaspar Schiess.

	* eruby_main.c (guess_mode): use ALLOCA_N().

Sat Dec  6 00:34:11 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_main.c (guess_mode): use strncpy() instead of strcpy().

Tue Aug 26 17:17:00 2003  Shugo Maeda <shugo@modruby.net>

	* version 1.0.4 released.

Tue Aug 19 11:54:43 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_main.c (run): do not call ruby_finalize() before
	error_print().

Tue Jul 29 12:41:01 2003  Shugo Maeda <shugo@modruby.net>

	* eruby_lib.c (eruby_compile): process multibyte characters
	correctly. Thanks to MoonWolf

Tue Jul 29 12:19:24 2003  U.Nakamura <usa@osb.att.ne.jp>

	* eruby_main.c: fix for ruby-1.8.0-preview5.

Sat Jul 26 19:20:38 2003  U.Nakamura <usa@osb.att.ne.jp>

	* Makefile.in: fix sitearch.

Wed Feb 19 11:22:34 2003  Shugo Maeda <shugo@modruby.net>

	* version 1.0.3 released.

Mon Jan 27 13:28:25 2003  Shugo Maeda <shugo@modruby.net>

	* configure.rb: rebuild with new autoconf.rb.

Fri Jan 24 12:21:41 2003  Shugo Maeda <shugo@modruby.net>

	* version 1.0.2 released.

Mon Jan 20 16:19:14 2003  U.Nakamura <usa@osb.att.ne.jp>
